force-app/main/default/objects/Charge_Head_Tax__c/Charge_Head_Tax__c.object-meta.xml
<CustomObject>
    <label>Charge Head Tax</label>
    <nameField>
        <label>Charge Head Tax Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charge Head Taxes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>