force-app/main/default/objects/Charge_Head_Tax__c/fields/BVC_CB_ChargeType__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_ChargeType__c</fullName>
    <label>ChargeType</label>
    <length>15</length>
    <type>Text</type>
</CustomField>