force-app/main/default/objects/Charge_Head_Tax__c/fields/CGST_Rate__c.field-meta.xml
<CustomField>
    <fullName>CGST_Rate__c</fullName>
    <label>CGST Rate%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>