force-app/main/default/objects/Charge_Head_Tax__c/fields/Charge_Head_Code__c.field-meta.xml
<CustomField>
    <fullName>Charge_Head_Code__c</fullName>
    <label>Charge Head Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>