force-app/main/default/objects/Charge_Head_Tax__c/fields/COA_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>COA_Product_Code__c</fullName>
    <formula>Invoice__r.Product__r.COA_Product_Code__c</formula>
    <label>COA Product Code</label>
    <type>Text</type>
</CustomField>