force-app/main/default/objects/Charge_Head_Tax__c/fields/COA_Revenue_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>COA_Revenue_Account_Code__c</fullName>
    <label>COA Revenue Account Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>