force-app/main/default/objects/Charge_Head_Tax__c/fields/UTGST_Amount__c.field-meta.xml
<CustomField>
    <fullName>UTGST_Amount__c</fullName>
    <label>UTGST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>